# Output-Automaton

./: .gitignore  CMakeLists.txt  example_input.in  main.cpp  readme.md
Include/: Automaton.h  FileInput.h  GeneralInput.h  UserInput.h
Sources/: Automaton.cpp  CMakeLists.txt  FileInput.cpp  GeneralInput.cpp  UserInput.cpp
Tests/: CMakeLists.txt  test_apply_all.cpp  test_apply_first.cpp  test_cycle.cpp  test_file_input.cpp
Tests/TestInputs/: test_in_1.test  test_in_2.test
